Fix `headerflexalign` and removed `baseline`
Baseline really made absolutely no difference with `center`

--- a/css/colormag.less
+++ b/css/colormag.less
@@ -1044,6 +1044,7 @@ div.skip a {
 
 [dir] #colormag__site-description {
     padding-bottom: 0px;
+    margin: 0;
 }
 
 /*
