--- a/css/src/colormag.less
+++ b/css/src/colormag.less
@@ -852,6 +852,7 @@ div.skip a {
     font-size: 24px;
     padding-bottom: 0px;
     font-family: 'Open Sans', serif;
+    margin: 0;
 }
 
 /*
